[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 16, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "dash_attack",
"speed": 20.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "attack",
"speed": 20.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "pre_dash",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 0.0

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.856354, 1 )
colors = PoolColorArray( 0.960784, 1, 0.909804, 1, 0.267362, 0.720858, 0.929281, 1, 0.219608, 0.701961, 0.929412, 0 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 16, 11.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "pre_dash"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="SwordChargeParticles" type="CPUParticles2D" parent="."]
position = Vector2( -8, 3 )
emitting = false
amount = 32
randomness = 0.1
local_coords = false
gravity = Vector2( -20, -60 )
initial_velocity = 10.0
initial_velocity_random = 0.5
color = Color( 0.960784, 1, 0.909804, 1 )
color_ramp = SubResource( 13 )

[node name="SwordChargeParticles2" type="CPUParticles2D" parent="."]
position = Vector2( -5, 3 )
emitting = false
amount = 32
randomness = 0.1
local_coords = false
gravity = Vector2( -20, -60 )
initial_velocity = 10.0
initial_velocity_random = 0.5
color = Color( 0.960784, 1, 0.909804, 1 )
color_ramp = SubResource( 13 )

[node name="SwordArea" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2( 0, -2.5 )
shape = SubResource( 14 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="SwordArea" to="." method="_on_SwordArea_body_entered"]
[connection signal="body_exited" from="SwordArea" to="." method="_on_SwordArea_body_exited"]
